--- a/backgrounds.html
+++ b/backgrounds.html
@@ -3,23 +3,25 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Fixed fullscreen backgrounds - fullPage.js</title>
+	<!-- <title>Background images - fullPage.js</title> -->
+	<title>Nielsen Wedding</title>
 	<meta name="author" content="Alvaro Trigo Lopez" />
-	<meta name="description" content="fullPage fixed full-screen backgrounds." />
-	<meta name="keywords"  content="fullpage,jquery,demo,screen,fixed,fullscreen,backgrounds,full-screen" />
+	<meta name="description" content="fullPage full-screen backgrounds." />
+	<meta name="keywords"  content="fullpage,jquery,demo,screen,fullscreen,backgrounds,full-screen" />
 	<meta name="Resource-type" content="Document" />
 
 
-	<link rel="stylesheet" type="text/css" href="../jquery.fullPage.css" />
+	<link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
 	<link rel="stylesheet" type="text/css" href="examples.css" />
 	<style>
 
 	/* Style for our header texts
-	* --------------------------------------- */
+	* --------------------------------------- */ 
 	h1{
 		font-size: 5em;
 		font-family: arial,helvetica;
-		color: #fff;
+		/*color: #fff;*/
+		color: #9400D3; /*added 12/28/15*/
 		margin:0;
 		padding:0;
 	}
@@ -33,18 +35,18 @@
 
 	/* Backgrounds will cover all the section
 	* --------------------------------------- */
-	#section0,
-	#section1,
-	#section2,
-	#section3{
+	.section{
 		background-size: cover;
-		background-attachment: fixed;
+	}
+	.slide{
+		background-size: cover;
 	}
 
-	/* Defining each sectino background and styles
+	/* Defining each section background and styles
 	* --------------------------------------- */
 	#section0{
-		background-image: url(imgs/bg1.jpg);
+	/*background-image: url(imgs/bg1.jpg);*/
+	background-image: url(imgs/mainPic.jpg);
 		padding: 30% 0 0 0;
 	}
 	#section2{
@@ -88,16 +90,14 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 
-	<script type="text/javascript" src="../jquery.fullPage.js"></script>
+	<script type="text/javascript" src="jquery.fullPage.js"></script>
 	<script type="text/javascript" src="examples.js"></script>
 
 	<script type="text/javascript">
 		$(document).ready(function() {
 			$('#fullpage').fullpage({
-				verticalCentered: false,
+				verticalCentered: false
 
-				//to avoid problems with css3 transforms and fixed elements in Chrome, as detailed here: https://github.com/alvarotrigo/fullPage.js/issues/208
-				css3:false
 			});
 		});
 	</script>
@@ -132,13 +132,19 @@
   <option id="responsiveWidth">Responsive Width</option>
   <option id="methods">Methods</option>
 </select>
+<!-- tweet button removed 12/28/15 -->
+<!-- <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://alvarotrigo.com/fullPage/" data-text="Great plugin to create fullscreen scrolling websites: http://alvarotrigo.com/fullPage/">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script> -->
 
-<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://alvarotrigo.com/fullPage/" data-text="Great plugin to create fullscreen scrolling websites: http://alvarotrigo.com/fullPage/">Tweet</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-
+<ul id="menu">
+	<li data-menuanchor="firstPage" class="active"><a href="#firstPage">RSVP</a></li>
+	<!-- <li data-menuanchor="secondPage"><a href="#secondPage">Second slide</a></li>
+	<li data-menuanchor="3rdPage"><a href="#3rdPage">Third slide</a></li> -->
+</ul>
 
 <div id="fullpage">
-	<div class="section " id="section0"><h1>fullPage.js</h1></div>
+	<!-- <div class="section " id="section0"><h1>fullPage.js</h1></div> -->
+	<div class="section " id="section0"><h1>Nielsen Wedding</h1></div>
 	<div class="section" id="section1">
 	    <div class="slide" id="slide1"><h1>Slide Backgrounds</h1></div>
 	    <div class="slide" id="slide2"><h1>Totally customizable</h1></div>
