--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 </head>
 <body>
 
-<a href="https://github.com/alvarotrigo/fullPage.js" id="githubLink"><img style="position: fixed;z-index:99; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
-
+<!-- <a href="https://github.com/alvarotrigo/fullPage.js" id="githubLink"><img style="position: fixed;z-index:99; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a> -->
+<!-- 
 <select id="demosMenu">
   <option selected>Choose Demo</option>
   <option id="backgrounds">Background images</option>
@@ -131,7 +131,7 @@
   <option id="responsiveHeight">Responsive Height</option>
   <option id="responsiveWidth">Responsive Width</option>
   <option id="methods">Methods</option>
-</select>
+</select> -->
 <!-- tweet button removed 12/28/15 -->
 <!-- <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://alvarotrigo.com/fullPage/" data-text="Great plugin to create fullscreen scrolling websites: http://alvarotrigo.com/fullPage/">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script> -->
