--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+	
+	<script type="text/javascript" src="jquery.slimscroll.min.js"></script>
 
 	<script type="text/javascript" src="jquery.fullPage.js"></script>
 	<script type="text/javascript" src="examples.js"></script>
@@ -96,7 +98,10 @@
 	<script type="text/javascript">
 		$(document).ready(function() {
 			$('#fullpage').fullpage({
-				verticalCentered: false
+				verticalCentered: false,
+				anchors: ['firstPage', 'secondPage', '3rdPage', '4thPage'],
+				sectionsColor: ['#C63D0F', '#1BBC9B', '#7E8F7C'],
+				scrollBar: true
 
 			});
 		});
@@ -137,7 +142,7 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script> -->
 
 <ul id="menu">
-	<li data-menuanchor="firstPage" class="active"><a href="#firstPage">RSVP</a></li>
+	<li data-menuanchor="firstPage" class="active"><a href="#secondPage">RSVP</a></li>
 	<!-- <li data-menuanchor="secondPage"><a href="#secondPage">Second slide</a></li>
 	<li data-menuanchor="3rdPage"><a href="#3rdPage">Third slide</a></li> -->
 </ul>
@@ -146,7 +151,11 @@
 	<!-- <div class="section " id="section0"><h1>fullPage.js</h1></div> -->
 	<div class="section " id="section0"><h1>Nielsen Wedding</h1></div>
 	<div class="section" id="section1">
-	    <div class="slide" id="slide1"><h1>Slide Backgrounds</h1></div>
+		<script type="text/javascript" src="http://app.rsvpify.com/embed/26977"></script>
+		<script type="text/javascript" src="http://app.rsvpify.com/js/iframeResizer.min.js"></script>
+		<script type="text/javascript">iFrameResize({autoResize: true,heightCalculationMethod: 'max',enablePublicMethods: true}, "#RSVPifyIFrame");</script>
+	    
+		<div class="slide" id="slide1"><h1>Slide Backgrounds</h1></div>
 	    <div class="slide" id="slide2"><h1>Totally customizable</h1></div>
 	</div>
 	<div class="section" id="section2"><h1>Lovely images <br />for a lovely page</h1></div>
