--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 				verticalCentered: false,
 				anchors: ['firstPage', 'secondPage', '3rdPage', '4thPage'],
 				sectionsColor: ['#C63D0F', '#1BBC9B', '#7E8F7C'],
-				scrollBar: true
-
+				scrollBar: true,
+				scrollOverflow: true
 			});
 		});
 	</script>
@@ -151,12 +151,12 @@
 	<!-- <div class="section " id="section0"><h1>fullPage.js</h1></div> -->
 	<div class="section " id="section0"><h1>Nielsen Wedding</h1></div>
 	<div class="section" id="section1">
+		<div class="slide" id="slide1"><h1>Slide Backgrounds</h1>
 		<script type="text/javascript" src="http://app.rsvpify.com/embed/26977"></script>
 		<script type="text/javascript" src="http://app.rsvpify.com/js/iframeResizer.min.js"></script>
 		<script type="text/javascript">iFrameResize({autoResize: true,heightCalculationMethod: 'max',enablePublicMethods: true}, "#RSVPifyIFrame");</script>
-	    
-		<div class="slide" id="slide1"><h1>Slide Backgrounds</h1></div>
-	    <div class="slide" id="slide2"><h1>Totally customizable</h1></div>
+		</div>
+	    <!-- <div class="slide" id="slide2"><h1>Totally customizable</h1></div> -->
 	</div>
 	<div class="section" id="section2"><h1>Lovely images <br />for a lovely page</h1></div>
 	<div class="section" id="section3"><h1>One Image = One thousand words</h1></div>
