--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				verticalCentered: false,
 				anchors: ['firstPage', 'secondPage', '3rdPage', '4thPage'],
 				sectionsColor: ['#C63D0F', '#1BBC9B', '#7E8F7C'],
-				scrollBar: true,
+				//scrollBar: true,
 				scrollOverflow: true
 			});
 		});
