--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
  	/*Adding background for the slides
 	* --------------------------------------- */
 	#slide1{
-		/*background-image: url(imgs/bg2.jpg);*/
+		background-image: url(imgs/bg2.jpg);
 		padding: 6% 0 0 0;
 	}
 	#slide2{
@@ -100,7 +100,7 @@
 			$('#fullpage').fullpage({
 				verticalCentered: false,
 				anchors: ['firstPage', 'secondPage', '3rdPage', '4thPage'],
-				//sectionsColor: ['#C63D0F', '#1BBC9B', '#7E8F7C'],
+				sectionsColor: ['#C63D0F', '#1BBC9B', '#7E8F7C'],
 				scrollBar: true
 			});
 		});
@@ -141,7 +141,7 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script> -->
 
 <ul id="menu">
-	<li data-menuanchor="firstPage" class="active"><a href="#secondPage">RSVP</a></li>
+	<li data-menuanchor="secondPage" class="active"><a href="#secondPage">RSVP</a></li>
 	<!-- <li data-menuanchor="secondPage"><a href="#secondPage">Second slide</a></li>
 	<li data-menuanchor="3rdPage"><a href="#3rdPage">Third slide</a></li> -->
 </ul>
@@ -149,13 +149,13 @@
 <div id="fullpage">
 	<!-- <div class="section " id="section0"><h1>fullPage.js</h1></div> -->
 	<div class="section " id="section0"><h1>Nielsen Wedding</h1></div>
-	<div class="section" id="section1"><h1>RSVP</h1>
-		<!-- <div class="slide" id="slide1"><h1>Slide Backgrounds</h1> -->
-		<script type="text/javascript" src="http://app.rsvpify.com/embed/26977"></script>
+	<div class="section" id="section1">
+		<div class="slide" id="slide1"><h1>Slide Backgrounds</h1></div>
+		<!-- <script type="text/javascript" src="http://app.rsvpify.com/embed/26977"></script>
 		<script type="text/javascript" src="http://app.rsvpify.com/js/iframeResizer.min.js"></script>
 		<script type="text/javascript">iFrameResize({autoResize: true,heightCalculationMethod: 'max',enablePublicMethods: true}, "#RSVPifyIFrame");</script>
-		</div>
-	    <!-- <div class="slide" id="slide2"><h1>Totally customizable</h1></div> -->
+		-->
+	    <div class="slide" id="slide2"><h1>Totally customizable</h1></div>
 	</div>
 	<div class="section" id="section2"><h1>Lovely images <br />for a lovely page</h1></div>
 	<div class="section" id="section3"><h1>One Image = One thousand words</h1></div>
