added new section for RSVP

--- a/index.html
+++ b/index.html
@@ -159,6 +159,11 @@
 	</div>
 	<div class="section" id="section2"><h1>Lovely images <br />for a lovely page</h1></div>
 	<div class="section" id="section3"><h1>One Image = One thousand words</h1></div>
+	<div class="section" id="section4"><h1>RSVP</h1>
+		<script type="text/javascript" src="http://app.rsvpify.com/embed/26977"></script>
+		<script type="text/javascript" src="http://app.rsvpify.com/js/iframeResizer.min.js"></script>
+		<script type="text/javascript">iFrameResize({autoResize: true,heightCalculationMethod: 'max',enablePublicMethods: true}, "#RSVPifyIFrame");</script>
+	</div>
 </div>
 
 </body>
