more minor changes to RSVP section

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 		$(document).ready(function() {
 			$('#fullpage').fullpage({
 				verticalCentered: false,
-				anchors: ['firstPage', 'secondPage', '3rdPage', '4thPage'],
-				sectionsColor: ['#C63D0F', '#1BBC9B', '#7E8F7C'],
+				anchors: ['firstPage', 'secondPage', '3rdPage', '4thPage','rsvpPage'],
+				//sectionsColor: ['#C63D0F', '#1BBC9B', '#7E8F7C'],
 				scrollBar: true
 			});
 		});
@@ -141,7 +141,7 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script> -->
 
 <ul id="menu">
-	<li data-menuanchor="secondPage" class="active"><a href="#secondPage">RSVP</a></li>
+	<li data-menuanchor="rsvpPage" class="active"><a href="#rsvpPage">RSVP</a></li>
 	<!-- <li data-menuanchor="secondPage"><a href="#secondPage">Second slide</a></li>
 	<li data-menuanchor="3rdPage"><a href="#3rdPage">Third slide</a></li> -->
 </ul>
