--- a/index.html
+++ b/index.html
@@ -47,8 +47,12 @@
 	#section0{
 	/*background-image: url(imgs/bg1.jpg);*/
 	background-image: url(imgs/mainPic.jpg);
-		padding: 30% 0 0 0;
+		padding: 10% 0 0 0;
 	}
+    #section0 h1{
+        font-family: "lucida calligraphy",arial,'sans serif';
+        font-style: "italic";
+    }
 	#section2{
 		background-image: url(imgs/venuePic.jpg);
 		padding: 6% 0 0 0;
@@ -57,6 +61,15 @@
 		background-image: url(imgs/bg4.jpg);
 		padding: 6% 0 0 0;
 	}
+    #section4{
+		background-image: url(imgs/andrea2.jpg);
+		padding: 6% 0 0 0;
+        /*background-size: contain;*/
+	}
+    #section4 h1{
+        font-family: "lucida calligraphy",arial,'sans serif';
+        font-style: "italic";
+    }
 
 
  	/*Adding background for the slides
@@ -76,24 +89,23 @@
 	#infoMenu li a {
 		color: #fff;
 	}
-    #xxx {
-  /*outline:white solid 0.5px;*/
-  padding: 6px 8px;
-  border-radius: 3px;
-  color:rgba(0,0,0,0.4);
-  font-weight: bold;
-  border: none;
-  margin: 0;
-  background: rgba(0,0,0,0.2);
-  font-family: helvetica, arial, sans-serif;
-  font-size: 19pt;
-  border: 5px solid rgba(255,69,0,0.5);
-}
-
-#xxx:hover {
-   background: rgba(0,0,0,0.4); 
-   color:rgba(0,0,0,0.8);
-}
+    #rsvpButton {
+        /*outline:white solid 0.5px;*/
+        padding: 6px 8px;
+        border-radius: 3px;
+        color:rgba(0,0,0,0.4);
+        font-weight: bold;
+        border: none;
+        margin: 0;
+        background: rgba(0,0,0,0.2);
+        font-family: helvetica, arial, sans-serif;
+        font-size: 19pt;
+        border: 5px solid rgba(255,69,0,0.5);
+    }
+    #rsvpButton:hover {
+        background: rgba(0,0,0,0.4); 
+        color:rgba(0,0,0,0.8);
+    }
 
 	</style>
 
@@ -115,13 +127,10 @@
 		$(document).ready(function() {
 			$('#fullpage').fullpage({
 				verticalCentered: false,
-				anchors: ['firstPage', 'secondPage', '3rdPage','rsvpPage'],
+				anchors: ['firstPage', 'registryPage', 'venuePage','rsvpPage', 'ourStory'],
 				//sectionsColor: ['#C63D0F', '#1BBC9B', '#7E8F7C'],
 				//scrollBar: true,
                 autoScrolling: false,
-                navigation: true,
-				navigationPosition: 'right',
-				navigationTooltips: ['First page', 'Second page', 'Venue Page', 'RSVP']
 			});
 		});
 	</script>
@@ -130,31 +139,26 @@
 <body>
 
 
-
 <ul id="menu">
+    <li data-menuanchor="firstPage" class="active"><a href="#firstPage">Back to Top</a></li>
+    <li data-menuanchor="registryPage" class="active"><a href="#registryPage">Registry</a></li>
+    <li data-menuanchor="venuePage" class="active"><a href="#venuePage">Venue</a></li>
 	<li data-menuanchor="rsvpPage" class="active"><a href="#rsvpPage">RSVP</a></li>
-	<li data-menuanchor="3rdPage"><a href="#3rdPage">Venue</a></li>
-	<!-- <li data-menuanchor="3rdPage"><a href="#3rdPage">Third slide</a></li> -->
+    <li data-menuanchor="ourStory" class="active"><a href="#ourStory">Our Story</a></li>
 </ul>
 
 <div id="fullpage">
 	<!-- <div class="section " id="section0"><h1>fullPage.js</h1></div> -->
-	<div class="section " id="section0"><h1>Nielsen Wedding</h1></div>
+	<div class="section" id="section0"><h1>July 30th, 2016</h1></div>
 	<div class="section" id="section1">
-		<div class="slide" id="slide1"><h1>Slide Backgrounds</h1></div>
-		<!-- <script type="text/javascript" src="http://app.rsvpify.com/embed/26977"></script>
-		<script type="text/javascript" src="http://app.rsvpify.com/js/iframeResizer.min.js"></script>
-		<script type="text/javascript">iFrameResize({autoResize: true,heightCalculationMethod: 'max',enablePublicMethods: true}, "#RSVPifyIFrame");</script>
-		-->
-	    <div class="slide" id="slide2"><h1>Totally customizable</h1></div>
+		<div class="slide" id="slide1"><h1>Registry info coming soon!</h1></div>
+	    <div class="slide" id="slide2"><h1>Registry info coming soon!</h1></div>
 	</div>
 	<div class="section" id="section2"><h1>Colonel Francis Beatty Park</h1></div>
 	<div class="section" id="section3"><h1>RSVP</h1>
-        <a href="http://joshandrea.rsvpify.com" target="new"><button id="xxx">Click Here to RSVP</button></a>
-	   <!-- <script type="text/javascript" src="http://app.rsvpify.com/embed/26977"></script>
-		<script type="text/javascript" src="http://app.rsvpify.com/js/iframeResizer.min.js"></script>
-		<script type="text/javascript">iFrameResize({autoResize: true,heightCalculationMethod: 'max',enablePublicMethods: true}, "#RSVPifyIFrame");</script> -->
+        <a href="http://joshandrea.rsvpify.com" target="new"><button id="rsvpButton">Click Here to RSVP</button></a>
 	</div>
+    <div class="section" id="section4"><h1>Welcome to Our Story</h1></div>
 </div>
 
 </body>
