--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 	* --------------------------------------- */ 
 	h1{
 		font-size: 5em;
-		font-family: arial,helvetica;
+		font-family: "lucida calligraphy",arial,'sans serif';
+        font-style: "italic";
 		/*color: #fff;*/
 		color: #9400D3; /*added 12/28/15*/
 		margin:0;
@@ -38,9 +39,6 @@
 	.section{
 		background-size: cover;
 	}
-	.slide{
-		background-size: cover;
-	}
 
 	/* Defining each section background and styles
 	* --------------------------------------- */
@@ -49,10 +47,10 @@
 	background-image: url(imgs/mainPic.jpg);
 		padding: 10% 0 0 0;
 	}
-    #section0 h1{
-        font-family: "lucida calligraphy",arial,'sans serif';
-        font-style: "italic";
-    }
+    #section1{
+		background-image: url(imgs/bg2.jpg);
+		padding: 6% 0 0 0;
+	}
 	#section2{
 		background-image: url(imgs/venuePic.jpg);
 		padding: 6% 0 0 0;
@@ -64,25 +62,7 @@
     #section4{
 		background-image: url(imgs/andrea2.jpg);
 		padding: 6% 0 0 0;
-        /*background-size: contain;*/
 	}
-    #section4 h1{
-        font-family: "lucida calligraphy",arial,'sans serif';
-        font-style: "italic";
-    }
-
-
- 	/*Adding background for the slides
-	* --------------------------------------- */
-	#slide1{
-		background-image: url(imgs/bg2.jpg);
-		padding: 6% 0 0 0;
-	}
-	#slide2{
-		background-image: url(imgs/bg5.jpg);
-		padding: 6% 0 0 0;
-	}
-
 
 	/* Bottom menu
 	* --------------------------------------- */
@@ -131,6 +111,7 @@
 				//sectionsColor: ['#C63D0F', '#1BBC9B', '#7E8F7C'],
 				//scrollBar: true,
                 autoScrolling: false,
+                continuousHorizontal: true
 			});
 		});
 	</script>
@@ -150,9 +131,8 @@
 <div id="fullpage">
 	<!-- <div class="section " id="section0"><h1>fullPage.js</h1></div> -->
 	<div class="section" id="section0"><h1>July 30th, 2016</h1></div>
-	<div class="section" id="section1">
-		<div class="slide" id="slide1"><h1>Registry info coming soon!</h1></div>
-	    <div class="slide" id="slide2"><h1>Registry info coming soon!</h1></div>
+	<div class="section" id="section1"><h1>More Registry info coming soon!</h1>
+        <a href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?pwsToken=&eventType=Wedding&registryId=542890391&pwsurl="target="new"><button id="rsvpButton">View BB&B Registry</button></a>
 	</div>
 	<div class="section" id="section2"><h1>Colonel Francis Beatty Park</h1></div>
 	<div class="section" id="section3"><h1>RSVP</h1>
