--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 	<link rel="stylesheet" type="text/css" href="jquery.fullPage.css" />
 	<link rel="stylesheet" type="text/css" href="examples.css" />
+    <link rel="stylesheet" href="flipclock.css">
 	<style>
 
 	/* Style for our header texts
@@ -68,9 +69,6 @@
 		padding: 4% 0 0 0;
 	}
 	#section2{
-        /*
-		background-image: url(imgs/venuePic.jpg);
-        */
         background-color: mediumpurple;
         border-style: groove;
         border-width: 26px 26px 26px 26px;
@@ -114,11 +112,13 @@
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	
 	<script type="text/javascript" src="jquery.slimscroll.min.js"></script>
 
 	<script type="text/javascript" src="jquery.fullPage.js"></script>
 	<script type="text/javascript" src="examples.js"></script>
+	<script src="flipclock.js"></script>
 
 	<script type="text/javascript">
 		$(document).ready(function() {
@@ -146,9 +146,21 @@
 </ul>
 
 <div id="fullpage">
-	<!-- <div class="section " id="section0"><h1>fullPage.js</h1></div> -->
 	<div class="section" id="section0"><h1>July 30th, 2016</h1>
-        <a style="position: relative; top: 50%;" href="http://joshandrea.rsvpify.com" target="new"><button id="rsvpButton">Click Here to RSVP</button></a>
+        <a style="position: relative; top: 40%;" href="http://joshandrea.rsvpify.com" target="new"><button id="rsvpButton">Click Here to RSVP</button></a>
+        <div class="clock" align="right" style="position: relative; left: 22%; top: 45%; margin:0em;"></div>
+		<script type="text/javascript">
+			var clock;
+			$(document).ready(function() {
+				var currentDate = new Date();
+                var futureDate  = new Date(1469912400000);
+				var diff = futureDate.getTime() / 1000 - currentDate.getTime() / 1000;
+				clock = $('.clock').FlipClock(diff, {
+					clockFace: 'DailyCounter',
+					countdown: true
+				});
+			});
+		</script>
     </div>
 	<div class="section" id="section1"><h2>Registry info will continue to be updated!</h2>
         <br><br><br>
