Updated registry, added map of Venue

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <div>
         <a href="http://joshandrea.rsvpify.com" target="new"><button id="rsvpButton">RSVP</button></a>
         </div>
-        <div class="clock" style="display: inline-block; position: relative; top: 45%;"></div>
+        <div class="clock" style="display: inline-block; position: relative; top: 40%;"></div>
 		<script type="text/javascript">
 			var clock;
 			$(document).ready(function() {
@@ -182,28 +182,31 @@
 			});
 		</script>
     </div>
-	<div class="section" id="section1"><h2>Registry info will continue to be updated!</h2>
+	<div class="section" id="section1"><h2>Click below to view our registry at Bed Bath and Beyond</h2>
         <br><br><br>
+		<h2 style="margin-left: 20px; margin-top: 20px;" align="left"> <h2/>
         <a href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?pwsToken=&eventType=Wedding&registryId=542890391&pwsurl="target="new"><button id="registryButton">View Registry</button></a>
-        <p style="margin-left: 20px; margin-top: 20px;" align="left"> We are registered at Bed Bath and Beyond. <br>
-	        <br> Can't find a gift? We can use giftcards. Our favorit stores are BB&B, Amazon, and Target or any other home store <br> 
-        </p>
+        <br><br> 
+		<h3 align="center">Can't find a gift? We can use giftcards. Our favorit stores are BB&B, Amazon, Home Depot, and Target! <h3/> 
     </div>
 	<div class="section" id="section2"><h1 style="color: white;">Northside Baptist Church</h1>
-        <p style="margin-left: 20px; color: White">333 Jeremiah Blvd, Charlotte, NC 28262
-            <br>
-        </p>
+        <p style="margin-left: 20px; color: White">333 Jeremiah Blvd, Charlotte, NC 28262<br></p>
+		<br/>
+		<p> If you are still looking for lodging options and need suggestions email us at 
+			<a href="mailto:wedding@joshandrea.com?Subject=Lodging%20questions" target="_top">wedding@joshandrea.com</a> 
+		</p>
+	<div>
         <div class="bubbleLeft">
-            <h3>Details on the wedding day to follow</h3>
+			<p><br/></p>
+            <h3>Details of the wedding day to follow</h3>
             <p></p>
         </div>
         <div class="bubbleRight">
-            <h3>Lodging for the Wedding</h3>
-            <p>We have not blocked any rooms but here are some options for loging in the area.</p>
-            <h4>Lodging Option 1</h4>
-            <h4>Lodging Option 2</h4>
-            <h4>Lodging Option 3</h4>
+			<p><br/></p>
+            <h3>Map of the Venue</h3>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1359.7659780343456!2d-80.78447636551668!3d35.28504315090121!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x435b8473fff38c06!2sNorthside+Baptist+Church!5e1!3m2!1sen!2sus!4v1465938070990" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
+	</div>
     </div>
     <div class="section" id="section3"><h1 class="transbox">Welcome to Our Story</h1></div>
 </div>
